--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./server.js"
+    "start": "concurrently \"nodemon server.js\" \"cd ./client && npm start\""
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/BenBKnight/myAutoSpace#readme",
   "dependencies": {
+    "concurrently": "^5.2.0",
     "express": "^4.17.1"
   }
 }
