--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"nodemon server.js\" \"cd ./client && npm start\""
+    "start": "concurrently \"nodemon server.js\" \"cd ./client && npm start\"",
+    "server": "nodemon --inspect server.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   "homepage": "https://github.com/BenBKnight/myAutoSpace#readme",
   "dependencies": {
     "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^5.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
