--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sequelize": "^6.3.3"
+  },
+  "devDependencies": {
+    "cors": "^2.8.5"
   }
 }
