--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "concurrently": "^5.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
