--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-notifications": "^1.6.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
