--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "concurrently": "^5.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "firebase": "^7.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
+    "npm": "^6.14.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sequelize": "^6.3.3"
