--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"nodemon server.js\" \"cd ./client && npm start\"",
+    "start": "nodemon server.js",
     "server": "nodemon --inspect server.js"
   },
   "repository": {
