--- a/.env_sample
+++ b/.env_sample
@@ -7,3 +7,6 @@ STORAGE_BUCKET=YOUR_STORAGE_BUCKET_HERE
 MESSAGING_SENDER_ID=YOUR_MESSAGING_SENDER_ID_HERE
 APP_ID=YOUR_APP_ID_HERE
 MEASUREMENT_ID=YOUR_MEASUREMENT_ID_HERE
+
+
+MYSQL_PASS=YOUR_MYSQL_PASSWORD
