--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"nodemon server.js\" \"cd ./client && npm start\"",
+    "start": "cd myAutoSpace && npm install && node server.js",
+    "heroku-postbuild": "cd client && npm install && npm run build",
     "server": "nodemon --inspect server.js"
   },
   "repository": {
